Fixed the scrollbar width; Adjusted the boxes; Attempt to center the navbar;

--- a/assets/about.css
+++ b/assets/about.css
@@ -36,7 +36,6 @@
 nav img {
   margin-top: 10px;
   margin-left: 70px;
-  transition: all 0.5s;
 }
 
 nav {
@@ -47,13 +46,13 @@ nav {
 
 nav ul {
   float: right;
-  margin-right: 20px;
+  margin-right: 34%;
 }
 
 nav ul li {
   display: inline-block;
   line-height: 80px;
-  margin: 0 5px;
+  margin: 0 30px;
 }
 
 nav ul li a {
@@ -91,7 +90,7 @@ footer h2 {
 }
 
 ::-webkit-scrollbar {
-  width: 16px;
+  width: 10px;
   background-color: rgba(0, 0, 0, 0.25);
   border-radius: 8px;
 }
@@ -124,7 +123,8 @@ mark {
   width: 100%;
   margin-top: 50px;
   display: flex;
-  align-items: center;
+  /* align-items: center;
+  justify-items: baseline; */
 }
 
 .box {
@@ -136,7 +136,7 @@ mark {
 .box img {
   width: 150px;
   border-radius: 260px;
-  margin-left: 32%;
+  margin-left: 35%;
   position: relative;
   top: 20px;
   box-shadow: 2px 3px 10px #888888;
