--- a/assets/contact.css
+++ b/assets/contact.css
@@ -47,14 +47,13 @@ nav {
 
 nav ul {
   float: right;
-  margin-right: 20px;
-  transition: all 0.5s;
+  margin-right: 34%;
 }
 
 nav ul li {
   display: inline-block;
   line-height: 80px;
-  margin: 0 5px;
+  margin: 0 30px;
 }
 
 nav ul li a {
@@ -122,7 +121,7 @@ section {
 }
 
 ::-webkit-scrollbar {
-  width: 16px;
+  width: 10px;
   background-color: rgba(0, 0, 0, 0.25);
   border-radius: 8px;
 }
