--- a/assets/index.css
+++ b/assets/index.css
@@ -44,7 +44,6 @@
 nav img {
   margin-top: 10px;
   margin-left: 70px;
-  transition: all 0.5s;
 }
 
 nav {
@@ -55,14 +54,13 @@ nav {
 
 nav ul {
   float: right;
-  margin-right: 20px;
-  transition: all 0.5s;
+  margin-right: 32%;
 }
 
 nav ul li {
   display: inline-block;
   line-height: 80px;
-  margin: 0 5px;
+  margin: 0 30px;
 }
 
 nav ul li a {
@@ -173,7 +171,7 @@ body::-webkit-scrollbar {
 }
 
 main::-webkit-scrollbar {
-  width: 16px;
+  width: 10px;
   background-color: rgba(0, 0, 0, 0.25);
   border-radius: 8px;
 }
@@ -240,6 +238,21 @@ iframe {
   top: 120px;
   align-items: center;
   left: 80px;
+}
+
+.inner-container3 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.inner-container3 ul {
+  line-height: 2;
+}
+
+.inner-container3 .image-section {
+  margin-top: 100px;
 }
 
 .inner-section-problem {
